alignment status in Composer was erroneous for cells into an aligned table; b=97519, r=jfrancis, sr=kin